@@ -188,7 +188,7 @@ public class HBaseAdmin implements HConstants {
       try {
         scannerId =
           server.openScanner(firstMetaServer.getRegionInfo().getRegionName(),
-            COL_REGIONINFO_ARRAY, tableName, System.currentTimeMillis(), null);
+            COL_REGIONINFO_ARRAY, tableName, HConstants.LATEST_TIMESTAMP, null);
         HbaseMapWritable values = server.next(scannerId);
         if (values == null || values.size() == 0) {
           break;
@@ -269,7 +269,7 @@ public class HBaseAdmin implements HConstants {
       try {
         scannerId =
           server.openScanner(firstMetaServer.getRegionInfo().getRegionName(),
-            COL_REGIONINFO_ARRAY, tableName, System.currentTimeMillis(), null);
+            COL_REGIONINFO_ARRAY, tableName, HConstants.LATEST_TIMESTAMP, null);
         boolean isenabled = false;
         
         while (true) {
@@ -370,7 +370,7 @@ public class HBaseAdmin implements HConstants {
       try {
         scannerId =
           server.openScanner(firstMetaServer.getRegionInfo().getRegionName(),
-            COL_REGIONINFO_ARRAY, tableName, System.currentTimeMillis(), null);
+            COL_REGIONINFO_ARRAY, tableName, HConstants.LATEST_TIMESTAMP, null);
         
         boolean disabled = false;
         while (true) {
