@@ -226,7 +226,7 @@ public class HMaster extends Thread implements HConstants, HMasterInterface,
         regionServer = connection.getHRegionConnection(region.getServer());
         scannerId =
           regionServer.openScanner(region.getRegionName(), COLUMN_FAMILY_ARRAY,
-              EMPTY_START_ROW, System.currentTimeMillis(), null);
+              EMPTY_START_ROW, HConstants.LATEST_TIMESTAMP, null);
 
         int numberOfRegionsFound = 0;
         while (true) {
@@ -420,7 +420,7 @@ public class HMaster extends Thread implements HConstants, HMasterInterface,
       BatchUpdate b = new BatchUpdate(rand.nextLong());
       long lockid = b.startUpdate(parent);
       b.delete(lockid, splitColumn);
-      srvr.batchUpdate(metaRegionName, System.currentTimeMillis(), b);
+      srvr.batchUpdate(metaRegionName, b);
         
       return result;
     }
@@ -2222,7 +2222,7 @@ public class HMaster extends Thread implements HConstants, HMasterInterface,
             scannerId =
               server.openScanner(HRegionInfo.rootRegionInfo.getRegionName(),
                   COLUMN_FAMILY_ARRAY, EMPTY_START_ROW,
-                  System.currentTimeMillis(), null);
+                  HConstants.LATEST_TIMESTAMP, null);
             
             scanMetaRegion(server, scannerId,
                 HRegionInfo.rootRegionInfo.getRegionName());
@@ -2272,7 +2272,7 @@ public class HMaster extends Thread implements HConstants, HMasterInterface,
 
             scannerId =
               server.openScanner(r.getRegionName(), COLUMN_FAMILY_ARRAY,
-                  EMPTY_START_ROW, System.currentTimeMillis(), null);
+                  EMPTY_START_ROW, HConstants.LATEST_TIMESTAMP, null);
 
             scanMetaRegion(server, scannerId, r.getRegionName());
 
@@ -2506,7 +2506,7 @@ public class HMaster extends Thread implements HConstants, HMasterInterface,
           b.put(lockid, COL_SERVER,
             Writables.stringToBytes(serverAddress.toString()));
           b.put(lockid, COL_STARTCODE, startCode);
-          server.batchUpdate(metaRegionName, System.currentTimeMillis(), b);
+          server.batchUpdate(metaRegionName, b);
           if (isMetaTable) {
             // It's a meta region.
             MetaRegion m = new MetaRegion(this.serverAddress,
@@ -2611,7 +2611,7 @@ public class HMaster extends Thread implements HConstants, HMasterInterface,
       Text metaRegionName = m.getRegionName();
       HRegionInterface server = connection.getHRegionConnection(m.getServer());
       long scannerid = server.openScanner(metaRegionName, COL_REGIONINFO_ARRAY,
-          tableName, System.currentTimeMillis(), null);
+          tableName, HConstants.LATEST_TIMESTAMP, null);
       try {
         HbaseMapWritable data = server.next(scannerid);
             
@@ -2647,7 +2647,7 @@ public class HMaster extends Thread implements HConstants, HMasterInterface,
       BatchUpdate b = new BatchUpdate(rand.nextLong());
       long lockid = b.startUpdate(regionName);
       b.put(lockid, COL_REGIONINFO, Writables.getBytes(info));
-      server.batchUpdate(metaRegionName, System.currentTimeMillis(), b);
+      server.batchUpdate(metaRegionName, b);
 
       // 4. Close the new region to flush it to disk.  Close its log file too.
       
@@ -2760,7 +2760,7 @@ public class HMaster extends Thread implements HConstants, HMasterInterface,
 
               long scannerId =
                 server.openScanner(m.getRegionName(), COLUMN_FAMILY_ARRAY,
-                    tableName, System.currentTimeMillis(), null);
+                    tableName, HConstants.LATEST_TIMESTAMP, null);
 
               List<Text> emptyRows = new ArrayList<Text>();
               try {
@@ -2911,7 +2911,7 @@ public class HMaster extends Thread implements HConstants, HMasterInterface,
         updateRegionInfo(b, i);
         b.delete(lockid, COL_SERVER);
         b.delete(lockid, COL_STARTCODE);
-        server.batchUpdate(m.getRegionName(), System.currentTimeMillis(), b);
+        server.batchUpdate(m.getRegionName(), b);
         if (LOG.isDebugEnabled()) {
           LOG.debug("updated columns in row: " + i.getRegionName());
         }
@@ -3047,7 +3047,7 @@ public class HMaster extends Thread implements HConstants, HMasterInterface,
       BatchUpdate b = new BatchUpdate(rand.nextLong());
       long lockid = b.startUpdate(i.getRegionName());
       b.put(lockid, COL_REGIONINFO, Writables.getBytes(i));
-      server.batchUpdate(regionName, System.currentTimeMillis(), b);
+      server.batchUpdate(regionName, b);
       if (LOG.isDebugEnabled()) {
         LOG.debug("updated columns in row: " + i.getRegionName());
       }
