@@ -27,6 +27,7 @@ Release 0.1.2 - 04/24/2008
    HBASE-604   Don't allow CLASSPATH from environment pollute the hbase CLASSPATH
    HBASE-608   HRegionServer::getThisIP() checks hadoop config var for dns interface name
                (Jim R. Wilson via Stack)
+   HBASE-609   Master doesn't see regionserver edits because of clock skew
 
   IMPROVEMENTS
    HBASE-559   MR example job to count table rows
